Update admin page

--- a/deskover-dashboard-website/src/app/components/home/dashboard/dashboard.component.html
+++ b/deskover-dashboard-website/src/app/components/home/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1 class="m-0 fw-bold text-uppercase text-primary">Bảng điều khiển</h1>
+                <h1 class="m-0 fw-bold text-uppercase text-primary">Trang chủ</h1>
             </div>
             <!-- /.col -->
             <div class="col-sm-6">
@@ -10,7 +10,7 @@
                     <li class="breadcrumb-item">
                       <a class="text-decoration-none" [routerLink]="['/']">Trang chủ</a>
                     </li>
-                    <li class="breadcrumb-item active">Bảng điều khiển</li>
+                    <li class="breadcrumb-item active">Trang chủ</li>
                 </ol>
             </div>
             <!-- /.col -->
