--- a/deskover-dashboard-website/src/app/components/home/manage/categories/categories.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/categories/categories.component.html
@@ -47,6 +47,7 @@
               <th class="align-middle">Slug</th>
               <th class="align-middle">Mô tả</th>
               <th class="align-middle text-center">Ngày cập nhật</th>
+              <th class="align-middle text-center">Cập nhật bởi</th>
               <th class="align-middle text-end"></th>
             </tr>
             </thead>
@@ -69,9 +70,9 @@
               <td class="align-middle text-center">
                 {{ category.modifiedAt | date: 'dd/MM/yyyy' }}
               </td>
-              <!--<td class="align-middle text-center">
-                {{ item.modifiedBy }}
-              </td>-->
+              <td class="align-middle text-center">
+                {{ category.modifiedBy }}
+              </td>
               <td class="align-middle text-end">
                 <div *ngIf="isActive" class="d-flex align-items-center justify-content-end">
                   <button type="button" class="btn btn-sm btn-info me-1" placement="top" tooltip="Sửa"
