--- a/deskover-dashboard-website/src/app/components/home/manage/categories/subcategories/subcategories.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/categories/subcategories/subcategories.component.html
@@ -62,6 +62,7 @@
               <th class="align-middle">Mô tả</th>
               <th class="align-middle">Danh mục cha</th>
               <th class="align-middle text-center">Ngày cập nhật</th>
+              <th class="align-middle text-center">Cập nhật bởi</th>
               <th class="align-middle text-end"></th>
             </tr>
             </thead>
@@ -87,6 +88,9 @@
               <td class="align-middle text-center">
                 {{ subcategory.modifiedAt | date: 'dd/MM/yyyy' }}
               </td>
+              <td class="align-middle text-center">
+                {{ subcategory.modifiedBy }}
+              </td>
               <td class="align-middle text-end">
                 <div *ngIf="isActive" class="d-flex align-items-center justify-content-end">
                   <button type="button" class="btn btn-sm btn-info me-1" placement="top" tooltip="Sửa"
@@ -108,7 +112,7 @@
             </tbody>
             <tbody *ngIf="subcategories?.length === 0">
             <tr>
-              <td colspan="7" class="text-center">Không tìm thấy kết quá</td>
+              <td [colSpan]="8" class="text-center">Không tìm thấy kết quá</td>
             </tr>
             </tbody>
           </table>
